--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="background-animation">
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+</div>
     <header>
         <nav>
             <div class="logo">AJ</div>
