--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>            
         </div>
         <div class="image" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="3000">
-        <img class="png" src="/pics/Adrin.jpg" alt="Adrien Jalayer's photo">
+        <img class="png" src="pics/Adrin.jpg" alt="Adrien Jalayer's photo">
         </div>
     </section>
     <!-- About Me Container -->
@@ -72,7 +72,7 @@
                     <p><span class="title">&#x2022; </span>Let's collaborate! Whether you have a project in mind or just want to discuss ideas, feel free to reach out—I’d <span class="love">love</span> to connect!</p>
                 </div>
                 <div data-aos="flip-right" class="about-image" data-aos-duration="3000" data-aos-delay="900">
-                    <img src="/pics/Me.png" alt="Adrien Jalayer - Web Designer & Developer">
+                    <img src="pics/Me.png" alt="Adrien Jalayer - Web Designer & Developer">
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
     <div class="projects__container">
         <!-- Card 1 -->
         <article class="projects__card" data-aos="flip-up" data-aos-duration="1500" data-aos-delay="900">
-            <img src="/pics/1.1.jpg" alt="Project Image" class="projects__img">
+            <img src="pics/1.1.jpg" alt="Project Image" class="projects__img">
             <div class="projects__model">
                 <span class="projects__subtitle">Web</span>
                 <h2 class="projects__title">Modern Website</h2>
@@ -148,7 +148,7 @@
 
         <!-- Card 2 -->
         <article class="projects__card" data-aos="flip-up" data-aos-duration="1500" data-aos-delay="900">
-            <img src="/pics/1.2.jpg" alt="Project Image" class="projects__img">
+            <img src="pics/1.2.jpg" alt="Project Image" class="projects__img">
             <div class="projects__model">
                 <span class="projects__subtitle">App</span>
                 <h2 class="projects__title">Mobile Application</h2>
@@ -160,7 +160,7 @@
 
         <!-- Card 3 -->
         <article class="projects__card" data-aos="flip-up" data-aos-duration="1500" data-aos-delay="900">
-            <img src="/pics/1.3.jpg" alt="Project Image" class="projects__img">
+            <img src="pics/1.3.jpg" alt="Project Image" class="projects__img">
             <div class="projects__model">
                 <span class="projects__subtitle">Design</span>
                 <h2 class="projects__title">UI/UX Design</h2>
@@ -172,7 +172,7 @@
 
         <!-- Card 4 -->
         <article class="projects__card" data-aos="flip-up" data-aos-duration="1500" data-aos-delay="900">
-            <img src="/pics/1.4.jpg" alt="Project Image" class="projects__img">
+            <img src="pics/1.4.jpg" alt="Project Image" class="projects__img">
             <div class="projects__model">
                 <span class="projects__subtitle">E-commerce</span>
                 <h2 class="projects__title">Online Store</h2>
@@ -184,7 +184,7 @@
 
         <!-- Card 5 -->
         <article class="projects__card" data-aos="flip-up" data-aos-duration="1500" data-aos-delay="900">
-            <img src="/pics/1.5.jpg" alt="Project Image" class="projects__img">
+            <img src="pics/1.5.jpg" alt="Project Image" class="projects__img">
             <div class="projects__model">
                 <span class="projects__subtitle">Web</span>
                 <h2 class="projects__title">Portfolio Website</h2>
@@ -196,7 +196,7 @@
 
         <!-- Card 6 -->
         <article class="projects__card" data-aos="flip-up" data-aos-duration="1500" data-aos-delay="900">
-            <img src="/pics/1.6.jpg" alt="Project Image" class="projects__img">
+            <img src="pics/1.6.jpg" alt="Project Image" class="projects__img">
             <div class="projects__model">
                 <span class="projects__subtitle">Blog</span>
                 <h2 class="projects__title">Personal Blog</h2>
@@ -236,6 +236,6 @@
 <script>
   AOS.init({offset:0,});
 </script>
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
